--- a/src/styles/charts.css
+++ b/src/styles/charts.css
@@ -58,7 +58,7 @@
 
 .bar-fill {
 	height: 100%;
-	width: 0;
+	width: var(--target-width);
 	position: relative;
 	display: flex;
 	align-items: center;
@@ -102,7 +102,6 @@
 .gini-bar {
 	transform-box: fill-box;
 	transform-origin: center bottom;
-	transform: scaleY(0);
 	will-change: transform;
 	transition: transform var(--duration-medium) ease-out;
 }
@@ -110,9 +109,17 @@
 .treemap-rect {
 	transform-box: fill-box;
 	transform-origin: center bottom;
-	transform: scaleY(0);
 	will-change: transform;
 	transition: transform var(--duration-medium) ease-out;
+}
+
+html.js-animate .bar-fill {
+	width: 0;
+}
+
+html.js-animate .gini-bar,
+html.js-animate .treemap-rect {
+	transform: scaleY(0);
 }
 
 .donut-segment {
